intel/bench_214/extr_.linuxdriversmediafirewirefiredtv-avc.c_avc_tuner_tuneqpsk_with_main/log.txt
bench_214/extr_.linuxdriversmediafirewirefiredtv-avc.c_avc_tuner_tuneqpsk_with_main/extr_.linuxdriversmediafirewirefiredtv-avc.c_avc_tuner_tuneqpsk_with_main.c:53:28: error: cannot initialize a variable of type 'struct avc_command_frame *' with an rvalue of type 'void *'
        struct avc_command_frame *c = (void *)fdtv->avc_data;
                                  ^   ~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
HLS FPGA Parse FAILED.
